fix layout on mobile hopefully

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  width: 100%;
 }
 
 body::before {
